--- a/notebook/cosine_model copy.ipynb
+++ b/notebook/cosine_model copy.ipynb
@@ -28,9 +28,8 @@
     "from spacy.tokenizer import Tokenizer\n",
     "from collections import Counter\n",
     "\n",
-    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from sklearn.neighbors import NearestNeighbors"
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity"
    ]
   },
   {
