--- a/notebook/med_cabinet_NLP_model copy.ipynb
+++ b/notebook/med_cabinet_NLP_model copy.ipynb
@@ -28,8 +28,7 @@
     "from spacy.tokenizer import Tokenizer\n",
     "from collections import Counter\n",
     "\n",
-    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.neighbors import NearestNeighbors"
    ]
   },
