Update cosine and nn models' tokens

--- a/notebook/cosine_model copy.ipynb
+++ b/notebook/cosine_model copy.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/cannabis.csv')\n",
+    "df = pd.read_csv('../app/data/csv/cannabis.csv')\n",
     "\n",
     "#change from combined_cannabis.csv to cannabis.csv"
    ]
@@ -76,7 +76,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Index</th>\n",
+       "      <th>_id</th>\n",
        "      <th>Name</th>\n",
        "      <th>Type</th>\n",
        "      <th>Rating</th>\n",
@@ -147,12 +147,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   Index             Name    Type  Rating  \\\n",
-       "0      0  Kelly Hill Gold  Indica     5.0   \n",
-       "1      1       Spyder Mon  Hybrid     5.0   \n",
-       "2      2            Mochi  Hybrid     5.0   \n",
-       "3      3    Molokai Purpz  Indica     5.0   \n",
-       "4      4         Monolith  Indica     5.0   \n",
+       "   _id             Name    Type  Rating  \\\n",
+       "0    0  Kelly Hill Gold  Indica     5.0   \n",
+       "1    1       Spyder Mon  Hybrid     5.0   \n",
+       "2    2            Mochi  Hybrid     5.0   \n",
+       "3    3    Molokai Purpz  Indica     5.0   \n",
+       "4    4         Monolith  Indica     5.0   \n",
        "\n",
        "                                      Effects  \\\n",
        "0  Happy,Energetic,Euphoric,Talkative,Aroused   \n",
@@ -208,7 +208,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "STOP_WORDS = nlp.Defaults.stop_words.union({\"$\", 'strain','', \"flower\", None, '-', ' ',\"it's\", 'i', \"i'm\", \"i've\", \"it's\", \"don't\", 'got', 'it.',  'weed', 'effects', 'effect', 'high', 'consumer', 'breed', 'unkown', 'unavailable', 's'})"
+    "STOP_WORDS = nlp.Defaults.stop_words.union({\"$\", '-', '', ' ',\n",
+    "                                            'bred','breed', 'breeds','call', 'calls',\n",
+    "                                            'combine', 'combines','consumer', 'contains','containing',\n",
+    "                                            \"don't\", 'effect', 'effects','especially','explanations',\n",
+    "                                            'flavor', 'flavors','flower','give', 'gives','got',  'high',\n",
+    "                                            'i', \"i'm\", \"i've\",'including','it.', \"it's\", \n",
+    "                                            'like', 'match', 'matches','making',\n",
+    "                                            'offer', 'offers','pack', 'packs','price', 'probably',\n",
+    "                                            'produce', 'produces', 'really',\n",
+    "                                            'refers', 'report', 'reports', \"'s\", 's',\n",
+    "                                            'seed', 'seeds','showing', \n",
+    "                                            'smell','start', 'started', 'stem', 'stems',\n",
+    "                                            'strain', 'strains','supposedly',\n",
+    "                                            'technique', 'techniques','tend', 'tends',\n",
+    "                                            'unavailable', 'unkown', 'user', 'users', 'utlizing',\n",
+    "                                            'weed', 'week', None})"
    ]
   },
   {
@@ -925,7 +940,7 @@
     {
      "data": {
       "text/plain": [
-       "Index                                                        992\n",
+       "_id                                                          992\n",
        "Name                                               Acapulco Gold\n",
        "Type                                                      Sativa\n",
        "Rating                                                      3.86\n",
@@ -953,7 +968,7 @@
     {
      "data": {
       "text/plain": [
-       "Index                                                        439\n",
+       "_id                                                          439\n",
        "Name                                                  White Gold\n",
        "Type                                                      Hybrid\n",
        "Rating                                                      4.32\n",
@@ -981,7 +996,7 @@
     {
      "data": {
       "text/plain": [
-       "Index                                                        184\n",
+       "_id                                                          184\n",
        "Name                                         Orange Hill Special\n",
        "Type                                                      Hybrid\n",
        "Rating                                                      4.77\n",
@@ -1009,7 +1024,7 @@
     {
      "data": {
       "text/plain": [
-       "Index                                                       1117\n",
+       "_id                                                         1117\n",
        "Name                                                  Chemdawg 4\n",
        "Type                                                      Hybrid\n",
        "Rating                                                      3.64\n",
@@ -1037,7 +1052,7 @@
     {
      "data": {
       "text/plain": [
-       "Index                                                         45\n",
+       "_id                                                           45\n",
        "Name                                                    Ape Shit\n",
        "Type                                                      Hybrid\n",
        "Rating                                                         5\n",
@@ -1127,8 +1142,8 @@
     "# # Imports\n",
     "import pickle\n",
     "\n",
-    "pickle.dump(tfidf, open('tfidf.pkl', 'wb'))\n",
-    "pickle.dump(dtm, open('dtm.pkl', 'wb'))"
+    "# pickle.dump(tfidf, open('tfidf.pkl', 'wb'))\n",
+    "# pickle.dump(dtm, open('dtm.pkl', 'wb'))"
    ]
   },
   {
@@ -1142,18 +1157,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Loading the pickled models\n",
-    "tfidf_model = pickle.load(open('tfidf.pkl', 'rb'))\n",
-    "dtm_model = pickle.load(open('dtm.pkl', 'rb'))"
+    "DTM_FILEPATH =  '../app/data/pickled_models/dtm.pkl'\n",
+    "TFIDF_FILEPATH = '../app/data/pickled_models/tfidf.pkl'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Loading the pickled models\n",
+    "tfidf_model = pickle.load(open(TFIDF_FILEPATH, 'rb'))\n",
+    "dtm_model = pickle.load(open(DTM_FILEPATH, 'rb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1165,11 +1190,11 @@
        "                min_df=3, ngram_range=(1, 3), norm='l2', preprocessor=None,\n",
        "                smooth_idf=True, stop_words='english', strip_accents=None,\n",
        "                sublinear_tf=False, token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
-       "                tokenizer=<function tokenize at 0x7fdc0c5fa488>, use_idf=True,\n",
+       "                tokenizer=<function tokenize at 0x7fb5a57fd268>, use_idf=True,\n",
        "                vocabulary=None)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1565,7 @@
        "[2155 rows x 5000 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1558,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1574,32 +1599,119 @@
     "    cosine_df1 = pd.DataFrame(cosine_similarity(rec_dtm1))\n",
     "    \n",
     "    recommendations5 = cosine_df1[cosine_df1[0] < 1][0].sort_values(ascending=False)[:5]\n",
-    "    \n",
-    "    print(recommendations5)\n",
+    "        \n",
+    "    return recommendations5\n",
     "\n",
     "#Does not print all 5 results? "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "992     0.328491\n",
-      "439     0.192376\n",
-      "184     0.173920\n",
-      "1117    0.171570\n",
-      "45      0.150978\n",
-      "Name: 0, dtype: float64\n"
-     ]
+     "data": {
+      "text/plain": [
+       "992     0.328491\n",
+       "439     0.192376\n",
+       "184     0.173920\n",
+       "1117    0.171570\n",
+       "45      0.150978\n",
+       "Name: 0, dtype: float64"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "cosine_recommender(user_input1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_id                                                          992\n",
+       "Name                                               Acapulco Gold\n",
+       "Type                                                      Sativa\n",
+       "Rating                                                      3.86\n",
+       "Effects                Happy,Uplifted,Euphoric,Energetic,Relaxed\n",
+       "Description    One of the most well-known strains, Acapulco G...\n",
+       "Flavors                                     Earthy,Sweet,Pungent\n",
+       "Nearest                                       0,961,1201,984,439\n",
+       "Name: 992, dtype: object"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[992]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_id                                                          439\n",
+       "Name                                                  White Gold\n",
+       "Type                                                      Hybrid\n",
+       "Rating                                                      4.32\n",
+       "Effects                Relaxed,Happy,Euphoric,Talkative,Uplifted\n",
+       "Description    White Gold from Sensi Seeds is an indica-domin...\n",
+       "Flavors                                  Earthy,Pungent,Tropical\n",
+       "Nearest                                  1413,1935,992,1723,1795\n",
+       "Name: 439, dtype: object"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[439]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "_id                                                          184\n",
+       "Name                                         Orange Hill Special\n",
+       "Type                                                      Hybrid\n",
+       "Rating                                                      4.77\n",
+       "Effects                    Happy,Relaxed,Sleepy,Euphoric,Focused\n",
+       "Description    Orange Hill Special is a select cross from the...\n",
+       "Flavors                                      Orange,Citrus,Sweet\n",
+       "Nearest                                 1634,1512,2149,1658,1887\n",
+       "Name: 184, dtype: object"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[184]"
    ]
   },
   {
