--- a/notebook/cosine_model copy.ipynb
+++ b/notebook/cosine_model copy.ipynb
@@ -1157,7 +1157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1190,11 +1190,11 @@
        "                min_df=3, ngram_range=(1, 3), norm='l2', preprocessor=None,\n",
        "                smooth_idf=True, stop_words='english', strip_accents=None,\n",
        "                sublinear_tf=False, token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
-       "                tokenizer=<function tokenize at 0x7fb5a57fd268>, use_idf=True,\n",
+       "                tokenizer=<function tokenize at 0x7ffb5dfc52f0>, use_idf=True,\n",
        "                vocabulary=None)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1565,7 +1565,7 @@
        "[2155 rows x 5000 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1607,7 +1607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
        "Name: 0, dtype: float64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1632,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1649,7 +1649,7 @@
        "Name: 992, dtype: object"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1660,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1677,7 +1677,7 @@
        "Name: 439, dtype: object"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1688,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1705,7 +1705,7 @@
        "Name: 184, dtype: object"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
