Have my tfidf working with pickled tokenizer

--- a/notebook/cosine_model.ipynb
+++ b/notebook/cosine_model.ipynb
@@ -245,20 +245,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Vectorization"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### TFIDF"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -1587,7 +1573,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create cosine_similarity function\n",
+    "# Create cosine_similarity function with pickled model\n",
     "\n",
     "import json\n",
     "\n",
