create new pickled models with updated token pkl

--- a/notebook/cosine_model.ipynb
+++ b/notebook/cosine_model.ipynb
@@ -46,139 +46,23 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "Shape: (2155, 8)\n"
-     ]
+     "name": "stdout",
+     "text": "Shape: (2155, 8)\n"
     },
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>_id</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Type</th>\n",
-       "      <th>Rating</th>\n",
-       "      <th>Effects</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Flavors</th>\n",
-       "      <th>Nearest</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Kelly Hill Gold</td>\n",
-       "      <td>Indica</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Happy,Energetic,Euphoric,Talkative,Aroused</td>\n",
-       "      <td>Cultivated by Joseph Arthur Botanicals in Colo...</td>\n",
-       "      <td>Pepper,Earthy,Coffee</td>\n",
-       "      <td>992,897,439,184,1877</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Spyder Mon</td>\n",
-       "      <td>Hybrid</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Uplifted,Creative,Focused,Happy,Relaxed</td>\n",
-       "      <td>Spyder Mon is an uplifting CBD strain with a g...</td>\n",
-       "      <td>Citrus,Earthy,Sweet</td>\n",
-       "      <td>218,157,1627,223,742</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Mochi</td>\n",
-       "      <td>Hybrid</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Sleepy,Happy,Hungry,Relaxed,Tingly</td>\n",
-       "      <td>Mochi by Sherbinski is another strain that lea...</td>\n",
-       "      <td>Pungent,Minty,Flowery</td>\n",
-       "      <td>614,457,208,705,130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Molokai Purpz</td>\n",
-       "      <td>Indica</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Aroused,Creative,Euphoric,Relaxed,Sleepy</td>\n",
-       "      <td>Moloka'i Purpz is a luscious Hawaiian landrace...</td>\n",
-       "      <td>Berry,Grape,Sweet</td>\n",
-       "      <td>1478,562,1063,50,390</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Monolith</td>\n",
-       "      <td>Indica</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>Relaxed,Sleepy,Tingly,Euphoric,Focused</td>\n",
-       "      <td>Monolith is an indica-dominant strain with Afg...</td>\n",
-       "      <td>Pungent,Earthy,Pine</td>\n",
-       "      <td>1397,862,1094,214,141</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   _id             Name    Type  Rating  \\\n",
-       "0    0  Kelly Hill Gold  Indica     5.0   \n",
-       "1    1       Spyder Mon  Hybrid     5.0   \n",
-       "2    2            Mochi  Hybrid     5.0   \n",
-       "3    3    Molokai Purpz  Indica     5.0   \n",
-       "4    4         Monolith  Indica     5.0   \n",
-       "\n",
-       "                                      Effects  \\\n",
-       "0  Happy,Energetic,Euphoric,Talkative,Aroused   \n",
-       "1     Uplifted,Creative,Focused,Happy,Relaxed   \n",
-       "2          Sleepy,Happy,Hungry,Relaxed,Tingly   \n",
-       "3    Aroused,Creative,Euphoric,Relaxed,Sleepy   \n",
-       "4      Relaxed,Sleepy,Tingly,Euphoric,Focused   \n",
-       "\n",
-       "                                         Description                Flavors  \\\n",
-       "0  Cultivated by Joseph Arthur Botanicals in Colo...   Pepper,Earthy,Coffee   \n",
-       "1  Spyder Mon is an uplifting CBD strain with a g...    Citrus,Earthy,Sweet   \n",
-       "2  Mochi by Sherbinski is another strain that lea...  Pungent,Minty,Flowery   \n",
-       "3  Moloka'i Purpz is a luscious Hawaiian landrace...      Berry,Grape,Sweet   \n",
-       "4  Monolith is an indica-dominant strain with Afg...    Pungent,Earthy,Pine   \n",
-       "\n",
-       "                 Nearest  \n",
-       "0   992,897,439,184,1877  \n",
-       "1   218,157,1627,223,742  \n",
-       "2    614,457,208,705,130  \n",
-       "3   1478,562,1063,50,390  \n",
-       "4  1397,862,1094,214,141  "
-      ]
+      "text/plain": "   _id             Name    Type  Rating  \\\n0    0  Kelly Hill Gold  Indica     5.0   \n1    1       Spyder Mon  Hybrid     5.0   \n2    2            Mochi  Hybrid     5.0   \n3    3    Molokai Purpz  Indica     5.0   \n4    4         Monolith  Indica     5.0   \n\n                                      Effects  \\\n0  Happy,Energetic,Euphoric,Talkative,Aroused   \n1     Uplifted,Creative,Focused,Happy,Relaxed   \n2          Sleepy,Happy,Hungry,Relaxed,Tingly   \n3    Aroused,Creative,Euphoric,Relaxed,Sleepy   \n4      Relaxed,Sleepy,Tingly,Euphoric,Focused   \n\n                                         Description                Flavors  \\\n0  Cultivated by Joseph Arthur Botanicals in Colo...   Pepper,Earthy,Coffee   \n1  Spyder Mon is an uplifting CBD strain with a g...    Citrus,Earthy,Sweet   \n2  Mochi by Sherbinski is another strain that lea...  Pungent,Minty,Flowery   \n3  Moloka'i Purpz is a luscious Hawaiian landrace...      Berry,Grape,Sweet   \n4  Monolith is an indica-dominant strain with Afg...    Pungent,Earthy,Pine   \n\n                 Nearest  \n0   992,897,439,184,1877  \n1   218,157,1627,223,742  \n2    614,457,208,705,130  \n3   1478,562,1063,50,390  \n4  1397,862,1094,214,141  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>_id</th>\n      <th>Name</th>\n      <th>Type</th>\n      <th>Rating</th>\n      <th>Effects</th>\n      <th>Description</th>\n      <th>Flavors</th>\n      <th>Nearest</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>Kelly Hill Gold</td>\n      <td>Indica</td>\n      <td>5.0</td>\n      <td>Happy,Energetic,Euphoric,Talkative,Aroused</td>\n      <td>Cultivated by Joseph Arthur Botanicals in Colo...</td>\n      <td>Pepper,Earthy,Coffee</td>\n      <td>992,897,439,184,1877</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>Spyder Mon</td>\n      <td>Hybrid</td>\n      <td>5.0</td>\n      <td>Uplifted,Creative,Focused,Happy,Relaxed</td>\n      <td>Spyder Mon is an uplifting CBD strain with a g...</td>\n      <td>Citrus,Earthy,Sweet</td>\n      <td>218,157,1627,223,742</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>Mochi</td>\n      <td>Hybrid</td>\n      <td>5.0</td>\n      <td>Sleepy,Happy,Hungry,Relaxed,Tingly</td>\n      <td>Mochi by Sherbinski is another strain that lea...</td>\n      <td>Pungent,Minty,Flowery</td>\n      <td>614,457,208,705,130</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>Molokai Purpz</td>\n      <td>Indica</td>\n      <td>5.0</td>\n      <td>Aroused,Creative,Euphoric,Relaxed,Sleepy</td>\n      <td>Moloka'i Purpz is a luscious Hawaiian landrace...</td>\n      <td>Berry,Grape,Sweet</td>\n      <td>1478,562,1063,50,390</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>Monolith</td>\n      <td>Indica</td>\n      <td>5.0</td>\n      <td>Relaxed,Sleepy,Tingly,Euphoric,Focused</td>\n      <td>Monolith is an indica-dominant strain with Afg...</td>\n      <td>Pungent,Earthy,Pine</td>\n      <td>1397,862,1094,214,141</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
    ],
    "source": [
@@ -235,6 +119,59 @@
     "def tokenize(text):\n",
     "  doc = nlp(text) #casting as text\n",
     "  return [token.lemma_.strip() for token in doc if not token.is_stop and not token.is_punct]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MODEL_FILEPATH = (os.path.dirname(__file__), \"tokenize.pkl\")\n",
+    "\n",
+    "# with open(MODEL_FILEPATH, \"wb\") as model_file:\n",
+    "#   print(\"SAVE PICKLE 1\")\n",
+    "#   pickle.dump(tokenize, model_file, protocol=pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TOKENIZE_FILEPATH =  '../app/data/pickled_models/tokenize.pkl'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'app/data/pickled_models/tokenize.pkl'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-98d5fb456d41>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Loading the pickled models\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mtokenize\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mTOKENIZE_FILEPATH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'app/data/pickled_models/tokenize.pkl'"
+     ]
+    }
+   ],
+   "source": [
+    "#Loading the pickled models\n",
+    "tokenize = pickle.load(open(TOKENIZE_FILEPATH, 'rb'))"
    ]
   },
   {
@@ -1724,7 +1661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.0-final"
   }
  },
  "nbformat": 4,
